<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="database_name">bmi_database</string>
    <string name="result_activity_data_transmission_failed">Data transfer failed！！！</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="input_calculate">CALCULATE</string>
    <string name="title_calculate">Calculate</string>

    <string name="adults_bmi_very_severely_underweight">Very Severely Underweight</string>
    <string name="adults_bmi_range_VerySeverelyUnderweight"><![CDATA[<16.0]]></string>
    <string name="adults_bmi_severely_underweight">Severely Underweight</string>
    <string name="adults_bmi_range_SeverelyUnderweight">16.0–16.9</string>
    <string name="adults_bmi_underweight">Underweight</string>
    <string name="adults_bmi_range_Underweight">17.0–18.4</string>
    <string name="adults_bmi_normal">Normal</string>
    <string name="adults_bmi_range_normal">18.5–24.9</string>
    <string name="adults_bmi_overweight">Overweight</string>
    <string name="adults_bmi_range_overweight">25.0–29.9</string>
    <string name="adults_bmi_obese_class_i">Obese Class I</string>
    <string name="adults_bmi_range_obese_class_i">30.0–34.9</string>
    <string name="adults_bmi_obese_class_ii">Obese Class II</string>
    <string name="adults_bmi_range_obese_class_ii">35.0–39.9</string>
    <string name="adults_bmi_obese_class_iii">Obese Class III</string>
    <string name="adults_bmi_range_obese_class_iii">≥ 40.0</string>

    <!-- 成年人评价文案 -->
    <string name="desc_vsu"> We wish you to show some love to yourself! You need to add healthy calories, go nutrient dense and seek medical advice to gain weight.</string>
    <string name="desc_su">It’s time to take care of yourself and get rid of the risk of poor immune function and osteoporosis. Treat yourself to a balanced meal and a variety of nutrients.</string>
    <string name="desc_u">It seems that your body needs more fuel. Unless you’re naturally very slim, you may need to consider ways of gaining weight as your weight may pose certain health risks.</string>
    <string name="desc_n">Congratulations! You’re in a great place now. Keep up your healthy habits to maintain your healthy weight.</string>
    <string name="desc_o">Don’t wait any longer! It’s time to take action to reach your weight target. You are carrying excess fat and should balance your diet and physical activity to achieve a healthy weight.</string>
    <string name="desc_ob1">Uh-oh! You currently weigh more than is ideal and have an increased risk of developing various health problems. It’s time to embrace healthy eating and increase your activity level.</string>
    <string name="desc_ob2"> ime to change! You are at high risk of obesity-related diseases. You should increase physical activity and reduce caloric intake slowly but surely. It is also vital to have health screening.</string>
    <string name="desc_ob3">We are worried about you! Your weight is a serious and imminent threat to your health. Go for health advice and a weight loss plan scientifically.</string>

    <!-- 青少年专属文案 -->
    <string name="desc_teen_u">Don’t be picky eating anymore, your body needs more energy to grow. Try to snack on healthy and high energy foods to put on weight.</string>
    <string name="desc_teen_n">Thumbs Up! You’ve done a great job and now only need to keep your lifestyle healthy to stay in this range.</string>
    <string name="desc_teen_o">Time to be get moving and say no to junk food! Your extra weight increases the chances of developing health problems. A small amount of weight loss can make a difference.</string>
    <string name="desc_teen_ob1">Feeling hard to keep up with friends? It’s time to repair your body by staying active and eat healthily! Seek your parents and a health professional`s advice to get support.</string>

    <string name="bottomsheet_got_it">GOT IT</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="setting_privacy_policy">Privacy policy</string>
    <string name="setting_feedback">Feedback</string>
    <string name="setting_rate_us">Rate us</string>
    <string name="setting_remove_ads">Remove Ads</string>
    <string name="setting_connect_to_google_fit">Connect to Google Fit</string>
    <string name="setting_language">Language</string>
    <string name="setting_backup_restore"><![CDATA[Backup & Restore]]></string>
    <string name="setting_synchronize_your_data">Synchronize your data</string>
    <string name="language_options">Language Options</string>
    <string name="result_discard">Discard</string>
    <string name="result_save">SAVE</string>
    <string name="setting_me">ME</string>
    <string name="date_picker_date">DATE</string>
    <string name="data_cancel">CANCEL</string>
    <string name="data_done">DONE</string>
    <string name="bottot_grade_bmi_wheel">BMI wheel</string>
    <string name="dialog_delete_confirm">Delete confirm</string>
    <string name="dialog_delete_text">Are you sure you want to delete this record?</string>
    <string name="dialog_delete_delete">Delete</string>
    <string name="dialog_delete_cancel_text">Cancel</string>
    <string name="input_weight">Weight</string>
    <string name="input_height">Height</string>
    <string name="input_time">Time</string>
    <string name="input_age">Age</string>
    <string name="result_assessment_weight" translatable="false">Normal Weight for your height:</string>
    <string name="statistics">Statistics</string>
    <string name="statistics_weight">Weight</string>
    <string name="update">Update</string>

    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="apr">Apr</string>
    <string name="june">June</string>
    <string name="may">May</string>
    <string name="july">July</string>
    <string name="aug">Aug</string>
    <string name="sep">Sep</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dec</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="night">Night</string>
    <string name="please_enter_your_weight">Please enter your weight</string>
    <string name="weight_out_of_range_2_551_lb">Weight out of range (2 – 551 lb)</string>
    <string name="weight_out_of_range_2_250_kg">Weight out of range (2 – 250 kg)</string>
    <string name="height_out_of_range_1_8_ft">Height out of range (1 – 8 ft)</string>
    <string name="height_out_of_range_1_11_in">Height out of range (1 – 11 in)</string>
    <string name="please_enter_your_height">Please enter your height.</string>
    <string name="height_out_of_range_1_250_cm">Height out of range (1 – 250 cm)</string>
    <string name="years_old">" years old"</string>
    <string name="log_out">Log out</string>
    <string name="log_in">Log in</string>
    <string name="recent">Recent</string>
    <string name="sorry_for_the_inconvenience">Sorry for the inconvenience</string>
    <string name="auto_text1">Due to Google’s vertification issue, we have to adjust our data sync function. During that period, your data sync would not be available.</string>
    <string name="auto_text2">The function will be back once the issue is solved. We’d greatly appreciate your patience.</string>
    <string name="ad_apps_you_might_need">Apps you might need</string>
    <string name="ad1_text1">Home Workout - No Equipments</string>
    <string name="ad1_text2">Weight Loss, Lose Belly Fat</string>
    <string name="ad2_text1">Lose Weight for Men at Home</string>
    <string name="ad2_text2">Weight Loss, Lose Belly Fat</string>
    <string name="feedback_or_suggestion">Feedback or suggestion</string>
    <string name="feedback">Thanks for your feedback!  We\'ll do our best to bring a better user experience.</string>

    <!-- 月份简写数组 -->
    <string-array name="month_short_names">
        <item>@string/jan</item>
        <item>@string/feb</item>
        <item>@string/mar</item>
        <item>@string/apr</item>
        <item>@string/may</item>
        <item>@string/june</item>
        <item>@string/july</item>
        <item>@string/aug</item>
        <item>@string/sep</item>
        <item>@string/oct</item>
        <item>@string/nov</item>
        <item>@string/dec</item>
    </string-array>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>