<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:background="@drawable/input_background"
        android:padding="5dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/font_extrabold"
            android:text="@string/dialog_delete_confirm"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/font_regular"
            android:paddingRight="5dp"
            android:text="@string/dialog_delete_text"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <TextView
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="15dp"
            android:textStyle="bold"
            android:fontFamily="@font/font_extrabold"
            android:text="@string/dialog_delete_delete"
            android:textColor="@color/blue"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/font_extrabold"
            android:textColor="@color/blue"
            android:text="@string/dialog_delete_cancel_text"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/delete"
            app:layout_constraintEnd_toStartOf="@+id/delete" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>