<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="310dp"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_auto_bg">

    <ImageView
        android:id="@+id/auto_1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/sorry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/auto_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/font_extrabold"
        android:gravity="center"
        android:paddingHorizontal="30dp"
        android:text="@string/sorry_for_the_inconvenience"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/auto_1" />

    <TextView
        android:id="@+id/auto_text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/font_regular"
        android:paddingHorizontal="20dp"
        android:text="@string/auto_text1"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auto_title" />

    <TextView
        android:id="@+id/auto_text_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/font_regular"
        android:paddingHorizontal="20dp"
        android:text="@string/auto_text2"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/auto_text_1" />

    <Button
        android:id="@+id/auto_done"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/font_extrabold"
        android:text="@string/data_done"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/auto_text_2" />
</androidx.constraintlayout.widget.ConstraintLayout>