<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_rounded_bg"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:paddingTop="24dp"
    android:paddingBottom="16dp">

    <!-- 顶部标题 DATE -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/font_extrabold"
        android:text="@string/date_picker_date"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="28sp" />

    <com.contrarywind.view.WheelView
        android:id="@+id/wheel_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- 底部双按钮 -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="120dp"
            android:layout_height="56dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="#EEEEEE"
            android:fontFamily="@font/font_extrabold"
            android:text="@string/data_cancel"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_done"
            android:layout_width="120dp"
            android:layout_height="56dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="#2962FF"
            android:fontFamily="@font/font_extrabold"
            android:text="@string/data_done"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>