<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FeedbackActivity"
    android:background="@color/background">
    <ImageView
        android:id="@+id/feedback_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="17dp"
        android:src="@drawable/recent_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/font_extrabold"
        android:text="@string/setting_feedback"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/feedback_back"
        app:layout_constraintStart_toEndOf="@id/feedback_back" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/feedback_back"
        android:background="@drawable/input_background"
        app:layout_constraintBottom_toTopOf="@id/result_save"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="15dp"
        android:inputType="textMultiLine"
        android:gravity="top|start"
        android:paddingTop="10dp"
        android:paddingHorizontal="10dp"
        android:textSize="16sp"
        android:hint="@string/feedback_or_suggestion"/>
    <Button
        android:id="@+id/result_save"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/font_extrabold"
        android:text="@string/result_save"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>